# wingpanel-indicator-cpufreq

./: README.md  meson.build
data/: com.github.dirli.wingpanel.indicator.cpufreq.gschema.xml  io.elementary.desktop.wingpanel.cpufreq.gschema.xml  io.elementary.desktop.wingpanel.cpufreq.policy  io.elenentary.wingpanel.cpufreq.policy  meson.build
debian/: changelog  control  copyright
po/: cpufreq-indicator.pot  ru.po
src/: Indicator.vala  Utils.vala  meson.build
src/Services/: FreqManager.vala  Settings.vala
src/Widgets/: PanelWidget.vala  PopoverWidget.vala
