install_data(
             'io.elementary.cpufreq.modifier',
             install_mode: 'r-xr--r--',
             install_dir: '/usr/bin'
)

install_data('io.elenentary.wingpanel.cpufreq.policy',
    install_dir: join_paths(get_option('datadir'), 'polkit-1', 'actions')
)

install_data('com.github.dirli.wingpanel.indicator.cpufreq.gschema.xml',
    install_dir: join_paths(get_option('datadir'), 'glib-2.0/schemas')
)
