install_data ('io.elementary.cpufreq.modifier',
    install_mode: 'r-xr--r--',
    install_dir: '/usr/bin'
)

install_data ('io.elementary.desktop.wingpanel.cpufreq.policy',
    install_mode: 'rw-r--r--',
    install_dir: join_paths (get_option ('datadir'), 'polkit-1', 'actions')
)

install_data ('io.elementary.desktop.wingpanel.cpufreq.gschema.xml',
    install_mode: 'rw-r--r--',
    install_dir: join_paths (get_option ('datadir'), 'glib-2.0/schemas')
)
